--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="favicon.svg" type ="image/svg+xml">
     <link rel="apple-touch-icon" href="apple-touch-icon.png" >
     <link rel="stylesheet" href="css/screen.css">
-    
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
